RESOLVED FIXED22260
Two build fixes for WebKit trunk against Symbian S60
https://bugs.webkit.org/show_bug.cgi?id=22260
Summary Two build fixes for WebKit trunk against Symbian S60
Simon Hausmann
Reported 2008-11-14 03:58:18 PST
In the past few weeks we have submitted a bunch of trivial fixes for compiling the trunk of WebKit with the Qt port inside the Symbian S60 environment. Two of those fixes however are more debatable and we would like to bring them up here for discussion and review.
Attachments
Patch to fix compilation with WINSCW (2.75 KB, patch)
2008-11-14 06:25 PST, Simon Hausmann
darin: review+
Simple workaround for RVCT compiler bug (3.36 KB, patch)
2008-11-14 06:27 PST, Simon Hausmann
darin: review+
Simon Hausmann
Comment 1 2008-11-14 06:25:29 PST
Created attachment 25170 [details] Patch to fix compilation with WINSCW We did not find a way to make the protection against the conversion from pointers to booleans to integers work with WINSCW, hence the #ifdef in the patch. But we would like to disable the protection in that case - in order to achieve compilation - and rely on the protection to work on the actual development platforms.
Simon Hausmann
Comment 2 2008-11-14 06:27:32 PST
Created attachment 25171 [details] Simple workaround for RVCT compiler bug This rather simple patch works around a bug in RVCT. I would normally not try to submit this as it is a compiler bug, but given the difficulty of changing RVCT and the simplicity I thought it's worth a try :-)
Darin Adler
Comment 3 2008-11-14 09:21:28 PST
Comment on attachment 25170 [details] Patch to fix compilation with WINSCW Code change looks OK, but it uses tabs, so we can't check it in as-is. I'll say r=me, but to save work for committers please don't put patches up for review if they have tabs. Maybe the Qt folks can configure their git repository to catch this?
Darin Adler
Comment 4 2008-11-14 09:23:38 PST
Comment on attachment 25171 [details] Simple workaround for RVCT compiler bug Looks fine, r=me
Simon Hausmann
Comment 5 2008-11-14 09:55:01 PST
Thanks Darin for the review! Landed both (with tabs fixed) in r38391 and r38392. I'll try to fix our git repositories to catch tab errors, I'm surprised I didn't see it :(
Note You need to log in before you can comment on or make changes to this bug.