2008-11-14  Kristian Amlie  <kristian.amlie@trolltech.com>

Reviewed by Darin Adler.

        Compile fix for WINSCW.

        This fix doesn't protect against implicit conversions from bool to
        integers, but most likely that will be caught on another platform.

        https://bugs.webkit.org/show_bug.cgi?id=22260

Canonical link: https://commits.webkit.org/30604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38391 268f45cc-cd09-0410-ab3c-d52691b4dbfc